默认对所有参与实验室的用户启用 SQLITE_VACUUM 和 DNSJAVA 实验